# rust-project-template

./: .justfile  Cargo.toml  Dockerfile  GNUmakefile  Makefile  README.md  config.toml  default-config.toml  make_to_just.sh
.github/: FUNDING.yml
src/: lib.rs  main.rs
src/handlers/: config.rs
src/prelude/chat/: mod.rs
src/prelude/commands/: mod.rs
src/prelude/global_rt/: mod.rs
src/prelude/handlers/: config.rs
src/prelude/terminal/: mod.rs
src/prelude/utils/: pathing.rs
src/ui/: mod.rs
